<resources>
    <string name="app_name">TrackerGPS</string>
    <string name="home">Home</string>
    <string name="empty">Empty</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="view_tracks">View Tracks</string>
    <string name="update_time">Update time</string>
    <string name="update_time_pparam">Update time(%1$s)</string>
    <string name="update_time_summary">Location update time\n</string>
    <string name="location">Location</string>
    <string name="track_color">Track color</string>
    <string name="track_color_summary">Chose track color</string>
    <string name="loaction_disabled">Location disabled</string>
    <string name="loaction_message">Du you wont enable GPS?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="center">Center</string>
    <string name="tracker_running">Tracker running!</string>
    <string name="timer_string">Time: 00:00:00</string>
    <string name="distance">Distance: %1$s m</string>
    <string name="averge_velocity">Average velocity: %1$s km/h</string>
    <string name="velocity">Velocity: %1$s km/h</string>
    <string name="save_thith_track">Save thith Track?</string>
    <string name="save_dialog_time">Time:</string>
    <string name="save_dialog_velocity">Velocity:</string>
    <string name="save_dialog_distance">Distance:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_dialog_time_s">Time:  %1$s s</string>
    <string name="save_dialog_distance_km">Distance: %1$s km</string>
    <string name="save_dialog_velocity_avr">Velocity: %1$s km/h</string>

</resources>