<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/location">

        <ListPreference
            android:defaultValue="3000"
            android:title="@string/update_time"
            app:entries="@array/loc_time_update_name"
            app:entryValues="@array/loc_time_update_value"
            app:icon="@drawable/ic_ipdate_time"
            app:key="update_time_key"
            app:summary="@string/update_time_summary" />

        <ListPreference
            android:defaultValue="#FFFF0000"
            android:title="@string/track_color"
            app:entries="@array/color_name"
            app:entryValues="@array/color_value"
            app:icon="@drawable/ic_circle"
            app:key="color_key"
            app:summary="@string/track_color_summary" />
    </PreferenceCategory>
</PreferenceScreen>